# connect-python

./: .gitignore  LICENSE  Makefile  README.md  buf.gen.yaml  go.mod  go.sum  pyproject.toml  requirements-dev.txt  run.py
cmd/protoc-gen-connect-python/: main.go
conformance/: Makefile  buf.gen.yaml  config.yaml  known-failing.txt  pyproject.toml  runner.py
connect/: client.py
elizav1/: eliza_connect.py  eliza_pb2.py
example/: Makefile  buf.gen.yaml  client.py  pyproject.toml  run.py  server.py
example/proto/elizav1/: eliza.proto
example/proto/mattv1/: matt.proto
src/connect/: __init__.py  client.py  client_test.py  server.py
