[project]
name = "connect-python"
version = "0.1.0.dev2"
authors = [{ email = "matt@ydekproductions.com" }]
description = "Client implementation for the Connect RPC protocol"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
  "protobuf",
  "httpcore",
]

[project.optional-dependencies]
http2 = ["h2"]

[project.urls]
"Homepage" = "https://github.com/mattrobenolt/connect-python"
"Bug Tracker" = "https://github.com/mattrobenolt/connect-python/issues"

[tool.hatch.build]
include = ["/src"]

[tool.hatch.build.targets.wheel]
packages = ["src/connect"]

[tool.pyright]
venvPath = "."
venv = ".venv"
# include = ["src/connect"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
